experiement_output/error_log/nondex-akud-modular-java-example:authentication-client.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1127/wd/NonDex-plugin-test/github.com/akud/modular-java-example/authentication-client/src/main/java/module-info.java:2: error: module not found: com.alexkudlick.authentication.models
    requires com.alexkudlick.authentication.models;
                                           ^
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':authentication-client:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 1s
